# lyceum-quest

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  LICENSE  README.md  endpoints-draft.txt  openapi.yaml
backend/: CMakeLists.txt  Dockerfile-dev  Makefile  Makefile-dev  README.md  docker-compose-dev.yml  docker-compose.yml
backend/configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
backend/postgresql/data/: initial_data.sql  initial_test_data.sql
backend/postgresql/schemas/: db_1.sql
backend/src/: main.cpp
backend/src/handlers/api/v1/characters/add-character/: view.cpp  view.hpp
backend/src/handlers/api/v1/characters/delete-character/: view.cpp  view.hpp
backend/src/handlers/api/v1/characters/get-character/: view.cpp  view.hpp
backend/src/handlers/api/v1/characters/get-characters/: view.cpp  view.hpp
backend/src/handlers/api/v1/characters/update-character/: view.cpp  view.hpp
backend/src/handlers/api/v1/login/: view.cpp  view.hpp
backend/src/handlers/api/v1/logout/: view.cpp  view.hpp
backend/src/handlers/api/v1/managers/add-manager/: view.cpp  view.hpp
backend/src/handlers/api/v1/managers/get-manager/: view.cpp  view.hpp
backend/src/handlers/api/v1/managers/get-managers/: view.cpp  view.hpp
backend/src/handlers/api/v1/managers/update-manager/: view.cpp  view.hpp
backend/src/handlers/api/v1/options/: view.cpp  view.hpp
backend/src/handlers/api/v1/quests/add-quest/: view.cpp  view.hpp
backend/src/handlers/api/v1/quests/get-quest/: view.cpp  view.hpp
backend/src/handlers/api/v1/quests/get-quests/: view.cpp  view.hpp
backend/src/handlers/api/v1/quests/update-quest/: view.cpp  view.hpp
backend/src/handlers/api/v1/reset-password/get-reset-password/: view.cpp  view.hpp
backend/src/handlers/api/v1/reset-password/patch-reset-password/: view.cpp  view.hpp
backend/src/handlers/api/v1/roles/: view.cpp  view.hpp
backend/src/handlers/api/v1/statuses/: view.cpp  view.hpp
backend/src/handlers/api/v1/update-password/: view.cpp  view.hpp
backend/src/handlers/api/v1/upload-file/: view.cpp  view.hpp
backend/src/handlers/api/v1/user-info/change-info/: view.cpp  view.hpp
backend/src/handlers/api/v1/user-info/get-info/: view.cpp  view.hpp
backend/src/handlers/lib/: auth.cpp  auth.hpp  check_admin.cpp  check_admin.hpp  cors_middleware.hpp  json_middleware.hpp  quest_details.cpp  quest_details.hpp
backend/src/handlers/v1/analytics/put-is-redirected/: view.cpp  view.hpp
backend/src/handlers/v1/get-cities/: view.cpp  view.hpp
backend/src/handlers/v1/get-quest/: view.cpp  view.hpp
backend/src/handlers/v1/post-quest/: view.cpp  view.hpp
backend/src/models/: character.cpp  character.hpp  file.cpp  file.hpp  quest.cpp  quest.hpp  role.cpp  role.hpp  session.hpp  task.cpp  task.hpp  task_x_files.hpp  user.cpp  user.hpp  user_status.cpp  user_status.hpp
backend/tests/: conftest.py  test_admin-quest.py  test_change-info.py  test_character.py  test_city.py  test_get-info.py  test_login.py  test_logout.py  test_manager.py  test_options.py  test_quest_completion.py  test_reset-password.py  test_roles.py  test_statuses.py  test_update-password.py
backend/tests/utils/: my_helpers.py
ci/: create_release.yml  deploy_to_prod.yml  lint.yml
frontend/admin/: index.html  package-lock.json  package.json  vite.config.ts
frontend/admin/src/app/: Layout.tsx  main.tsx
frontend/admin/src/app/providers/ToastProvider/: index.ts
frontend/admin/src/app/providers/router/: ProtectedRoute.tsx  Redirect.tsx  appRouter.tsx
frontend/admin/src/app/providers/useAuth/: index.ts
frontend/admin/src/app/styles/: global.css  styles.module.css
frontend/admin/src/features/FaderOnScroll/: index.ts
frontend/admin/src/features/FaderOnScroll/types/: types.ts
frontend/admin/src/features/FaderOnScroll/util/: index.tsx  styles.module.css
frontend/admin/src/features/ToastKeydown/: use-keydown.ts
frontend/admin/src/features/modalOpen/hook/: index.tsx
frontend/admin/src/features/modalOpen/lib/: ModelContoller.tsx  types.ts
frontend/admin/src/features/modalOpen/model/: index.tsx
frontend/admin/src/features/useToast/: index.ts
frontend/admin/src/features/useToast/lib/: index.ts
frontend/admin/src/pages/analytics/: index.ts
frontend/admin/src/pages/analytics/ui/: index.tsx  styles.module.css
frontend/admin/src/pages/changePassword/: index.ts
frontend/admin/src/pages/changePassword/ui/: index.tsx  styles.module.css
frontend/admin/src/pages/characters/: index.ts
frontend/admin/src/pages/characters/ui/: index.tsx  styles.module.css
frontend/admin/src/pages/createQuest/: index.ts
frontend/admin/src/pages/createQuest/components/: DropDown.tsx  styles.module.css
frontend/admin/src/pages/createQuest/ui/: index.tsx  (+1 more)
frontend/admin/src/pages/quests/: index.ts
frontend/admin/src/pages/updatePassword/: index.ts
frontend/admin/src/shared/api/: useCustomQuery.tsx
frontend/admin/src/widgets/Toast/: index.ts
frontend/admin/src/widgets/ToastShelf/: index.ts
frontend/client/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/client/src/: App.css  App.tsx  index.css
frontend/client/src/components/ActionCard/: ActionCard.module.css  ActionCard.tsx
frontend/client/src/components/Attachment/: Attachment.module.css  Attachment.tsx
frontend/client/src/components/Banner/: Banner.module.css  Banner.tsx
frontend/client/src/components/Chat/: Chat.module.css  Chat.tsx
frontend/client/src/components/CityInput/: CityInput.module.css  CityInput.tsx
frontend/client/src/components/Header/: Header.module.css  Header.tsx
frontend/client/src/components/Keyboard/: Keyboard.module.css  Keyboard.tsx
frontend/client/src/components/MessageLayout/: MessageLayout.module.css  MessageLayout.tsx
frontend/client/src/components/Text/: Text.module.css  Text.tsx
frontend/client/src/utils/: interfaces.ts  utils.ts
nginx/: Dockerfile  nginx.conf
(+83 files in other folders)
